feat: 添加下拉菜单容器和遮罩层，优化下拉菜单交互逻辑和样式

--- a/style/table-header-menu.css
+++ b/style/table-header-menu.css
@@ -22,7 +22,7 @@
 /* 下拉菜单 */
 .table-header-dropdown {
   position: absolute;
-  top: 26px;
+  top: 0;
   right: 0;
   background-color: white;
   border: 1px solid #ccc;
