--- a/style/tables.css
+++ b/style/tables.css
@@ -25,9 +25,9 @@
   right: -2px;
   top: 0;
   bottom: 0;
-  width: 4px;
+  width: 2px;
   z-index: 20;
-  background-color: #adf;
+  background-color: #3e9dfe;
   pointer-events: none;
 }
 .ProseMirror.resize-cursor {
