feat: 注释掉表格添加行按钮的样式，以便后续调整和优化

--- a/style/table-add-buttons.css
+++ b/style/table-add-buttons.css
@@ -1,4 +1,4 @@
-.table-add-row-button,
+/* .table-add-row-button,
 .table-add-column-button {
   position: absolute;
   cursor: pointer;
@@ -26,4 +26,4 @@
 .table-add-row-button:hover,
 .table-add-column-button:hover {
   opacity: 1;
-}
+} */
