--- a/style/table-top-left-buttons.css
+++ b/style/table-top-left-buttons.css
@@ -1,33 +1,38 @@
 .table-cell-internal-button {
   user-select: none;
-  transition: opacity 150ms;
+  transition: opacity 300ms;
   cursor: pointer;
-  opacity: 1;
+  opacity: 0;
   position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-radius: 4px;
   background: white;
   box-shadow:
     rgba(0, 0, 0, 0.08) 0px 4px 12px -2px,
     rgba(84, 72, 49, 0.08) 0px 0px 0px 1px;
   z-index: 40;
-  pointer-events: none;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.table-cell-internal-button.active {
+  opacity: 1;
 }
 
 .table-cell-button-first-row {
-  top: -8px;
-  left: calc(50% - 13px);
-  height: 16px;
-  width: 26px;
-  padding: 2px 4px;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -10px;
+  width: 16px;
+  height: 26px;
+  line-height: 26px;
+  writing-mode: vertical-lr;
 }
 
 .table-cell-button-first-column {
-  top: calc(50% - 17px);
-  left: -8px;
-  width: 16px;
-  height: 26px;
-  padding: 4px 2px;
+  top: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 16px;
+  line-height: 10px;
+  width: 26px;
 }
