feat: 添加鼠标悬停效果，优化按钮可见性和交互体验

--- a/style/table-bottom-right-buttons.css
+++ b/style/table-bottom-right-buttons.css
@@ -2,7 +2,7 @@
 .table-add-column-button,
 .table-add-row-column-button {
   position: absolute;
-  color: rgba(55, 53, 47, 0.45);
+  color: #c6c6c6;
   user-select: none;
   transition: opacity 150ms 50ms;
   opacity: 1;
