--- a/style/table-top-left-buttons.css
+++ b/style/table-top-left-buttons.css
@@ -9,7 +9,7 @@
   box-shadow:
     rgba(0, 0, 0, 0.08) 0px 4px 12px -2px,
     rgba(84, 72, 49, 0.08) 0px 0px 0px 1px;
-  z-index: 40;
+  z-index: 4;
   text-align: center;
   box-sizing: border-box;
   color: #37352f59;
@@ -19,7 +19,7 @@
   background: #f1f1f1;
 }
 
-.table-cell-internal-button:active {
+.table-cell-internal-button.focus {
   background: #3e9dfe;
   color: #ffffff;
 }
