--- a/style/table-top-left-buttons.css
+++ b/style/table-top-left-buttons.css
@@ -55,8 +55,15 @@
   width: 100%;
   height: 100%;
   z-index: 100;
-  display: none;
+  opacity: 0;
+  visibility: hidden;
   pointer-events: none;
+  transition: opacity 200ms ease;
+}
+
+.table-cell-menu-container.visible {
+  opacity: 1;
+  visibility: visible;
 }
 
 /* 菜单透明层 */
