--- a/style/table-top-left-buttons.css
+++ b/style/table-top-left-buttons.css
@@ -6,9 +6,7 @@
   position: absolute;
   border-radius: 4px;
   background: white;
-  box-shadow:
-    rgba(0, 0, 0, 0.08) 0px 4px 12px -2px,
-    rgba(84, 72, 49, 0.08) 0px 0px 0px 1px;
+  box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.12);
   z-index: 4;
   text-align: center;
   box-sizing: border-box;
