feat: 优化表格菜单按钮样式，增加右侧内边距；修复表格焦点样式

--- a/style/table-header-menu.css
+++ b/style/table-header-menu.css
@@ -30,8 +30,11 @@
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  gap: 6px;
   height: 100%;
+}
+
+.table-header-menu-button > span {
+  padding-right: 6px;
 }
 
 .table-header-menu-button:hover {
